--- a/unit8/css/style.css
+++ b/unit8/css/style.css
@@ -5,11 +5,17 @@
 	width: 100%;
 }
 
-header, .background1 {
+header {
 	background-color: #D3D3D3;
 	text-align: center;
 	border: 10px solid #D3D3D3;
 	height: 100vh;
+}
+
+.background1 {
+	background-color: #D3D3D3;
+	text-align: center;
+	border: 10px solid #D3D3D3;
 }
 
 nav {
@@ -22,7 +28,6 @@ nav {
 	background-color: #A9A9A9;
 	text-align: center;	
 	border: 10px solid #A9A9A9;
-	height: 100vh;
 }
 
 h1 {
@@ -42,7 +47,7 @@ p {
 
 #slogan {
 	font-style: italic;
-	font-size: 24px;
+	font-size: 1.5em; /*24px*/
 	font-family: 'Nothing You Could Do';
 	font-weight: 700;
 }
@@ -55,37 +60,55 @@ ul {
 }
 
 
-
 #cherry-tomatoes-image {
 	width: 20%;
 }
 
 .large-image {
-	width: 30%;
+	width: 20%;
+	padding: .5em;
 }
 
 .small-image {
 	width: 25%;
 }
 
+#squash-casserole img {
+	padding-top: 30px;
+}
+
+#broiled-tomatoes img {
+	padding-top: 0px;
+}
+
+article {
+	max-width: 600px;
+	margin: 0 auto;
+}
+
 .recipe-image {
 	width: 20%;
+	
 }
 
-#recipes {
-	height: 100vh;
+#recipes > div {
+	max-width: 600px;
+	margin: 0 auto;
 }
 
+#recipes ul a {
+	display: block;
+}
 #mark-recipes {
 	border: 1px solid #D3D3D3;
-	padding: 50px;
+	padding: 20px;
 	float: left;
 	width: 40%;
 }
 
 #val-recipes {
 	border: 1px solid #D3D3D3;
-	padding: 50px;
+	padding: 20px;
 	float: right;
 	width: 40%;
 }
@@ -97,12 +120,10 @@ ul {
 }
 
 
-
 #instructions {
-	width: 50%;
 	margin-left: auto;
     margin-right: auto;
-    
+    clear:both;
 }
 
 .clearfix:after {
@@ -114,18 +135,47 @@ ul {
 	height: 0;
 }
 
-@media only screen and (max-width: 1075px) {
-  
-	#mark-recipes #val-recipes {
-    width: 40%;
-    outline-width: .5em;
-    padding: .5em;
-    height: 2em;
-    line-height: 2em;
-  	}
 
 
-  }
+@media only screen and (max-width: 486px) {
+
+	#disc {
+		width: 50%;
+		padding-left: 90px;
+	}
+
+	header img {
+		padding-top: 40px;
+	}
+
+	.large-image {
+		width: 60%;
+	}
+
+	#mark-recipes {
+		width: 100%;
+		padding: 0px;
+	}
+
+	#val-recipes {
+		width: 100%;
+		padding: 0px;
+	}
+
+	#squash-casserole img {
+		width: 50%;
+	}
+	
+	#broiled-tomatoes img {
+		width: 50%;
+	}
+
+	#about-me img {
+		width: 60%;
+	}
+
+}
+	
 
 
 
