Adding Unit 8 image and h1 tweaks
Adding Unit 8 image and h1 tweaks

--- a/unit8/css/style.css
+++ b/unit8/css/style.css
@@ -137,8 +137,20 @@ article {
 
 
 
+
+@media only screen and (max-width: 510px) {
+
+	h1 {
+		width: 40%;
+		padding-left: 140px;
+	}
+
 @media only screen and (max-width: 486px) {
 
+	h1 {
+		width: 40%;
+		padding-left: 130px;
+	}
 	#disc {
 		width: 50%;
 		padding-left: 90px;
